Review Fixes Added non-Google third-party API Added language attribution on html Removed all id's from CSS Changed visibality rendering of markers

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body {
   right: 0;
 }
 
-#map {
+.map-canvas {
   height: 100%;
 }
 
